--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   pin_code_fields: ^7.0.0
+  carousel_slider: ^3.0.0
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
