--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   pin_code_fields: ^7.0.0
   carousel_slider: ^3.0.0
   flutter_svg: ^0.22.0
+  flutter_tindercard: ^0.2.0
 
 dev_dependencies:
   flutter_test:
