--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animations: ^2.0.0
+  carousel_slider: ^3.0.0
+  chewie: ^1.0.0
   cupertino_icons: ^1.0.2
+  flutter_svg: ^0.22.0
   intl: ^0.17.0
   pin_code_fields: ^7.0.0
-  carousel_slider: ^3.0.0
-  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
