--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   chewie: ^1.0.0
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
+  font_awesome_flutter: ^9.0.0
   intl: ^0.17.0
   pin_code_fields: ^7.0.0
 
