Filter page UI done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,12 @@ dependencies:
   carousel_slider: ^3.0.0
   chewie: ^1.0.0
   cupertino_icons: ^1.0.2
+  drag_and_drop_gridview: ^1.0.8
   flutter_svg: ^0.22.0
   font_awesome_flutter: ^9.0.0
-  drag_and_drop_gridview: ^1.0.8
   intl: ^0.17.0
   pin_code_fields: ^7.0.0
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
