--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/dogs/
+    - assets/images/profiles/
     - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
